Add query_total_weight and query_cate_weight to nif

--- a/rebar.config
+++ b/rebar.config
@@ -1,7 +1,30 @@
-{erl_opts, [debug_info]}.
-{deps, []}.
+{erl_opts, [
+warn_export_all,
+warn_export_vars,
+warn_obsolete_guard,
+warn_shadow_vars,
+warn_unused_function,
+warn_deprecated_function,
+warn_unused_import,
+warnings_as_errors
+]}.
+{deps, [
+]}.
+{eunit_opts, [export_all]}.% same as options for eunit:test(Tests, ...)
+{eunit_tests, []}. % same as Tests argument in eunit:test(Tests, ...)
+{cover_enabled, true}.
 
 {shell, [
   % {config, "config/sys.config"},
-    {apps, [word_sensitive_nif]}
+    {apps, [word_sensitive_nif]},
+    {deps,[meck,recon]}
 ]}.
+{profiles, [
+ {test, [{erl_opts, [{d, 'TEST'},nowarn_export_all, export_all]},
+          {shell, [{config, "config/sys.config"}]},
+          {deps, [recon, meck]}]}
+  ]}.
+
+{pre_hooks, [
+             {compile, "sh crates/build_crates.sh build"}
+             ]}.
